# tellers-timeline

./: .gitignore  Cargo.toml  Justfile  README.md
.github/workflows/: auto-version.yml  ci.yml
bindings/flutter/: Cargo.toml
bindings/flutter/src/: lib.rs
bindings/flutter_bridge/: Cargo.toml
bindings/flutter_bridge/.cargo/: config.toml
bindings/flutter_bridge/src/: lib.rs
bindings/js/: Cargo.toml  package.json
bindings/js/src/: lib.rs
bindings/js/tests/: roundtrip.rs
bindings/python/: Cargo.toml  build.rs  pyproject.toml  simple.json
bindings/python/python/: tellers_timeline.pyi
bindings/python/python/tellers_timeline/: __init__.py  __init__.pyi
bindings/python/src/: lib.rs
bindings/python/tests/: conftest.py  print_otio.py  test_crop.py  test_linked.py  test_position_volume.py  test_rich_text.py  test_roundtrip.py  test_tracks_api.py
examples/: linked_clip_examples.py
spec/: otio.schema.json
spec/examples/: arbitrary_metadata.json  complex_timeline.json  simple.json  two_tracks.json
tellers-timeline-core/: Cargo.toml
tellers-timeline-core/src/: insert.rs  lib.rs  metadata.rs  sanitize.rs  serialize.rs  stack_methods.rs  types.rs  validate.rs
tellers-timeline-core/src/stack_methods/: mod.rs  stack_insert_propagate.rs  stack_item_delete.rs  stack_item_get.rs  stack_item_insert.rs  stack_item_link.rs  stack_item_move.rs  stack_item_replace.rs  stack_item_set.rs  stack_item_split.rs  stack_track.rs
tellers-timeline-core/src/track_methods/: mod.rs  track_item_delete.rs  track_item_get.rs  track_item_insert.rs  track_item_replace.rs  track_item_resize.rs  track_item_split.rs  track_sanitize.rs
tellers-timeline-core/tests/: clear_asset_backed.rs  clear_target_urls.rs  clip_rich_text_and_avg_volume.rs  crop.rs  delete.rs  effects_parsing.rs  gap_deserialization.rs  golden.rs  group_id_metadata.rs  grouped.rs  insert.rs  linked.rs  move.rs  position.rs  resize.rs  rich_text.rs  sanitize.rs  serialize.rs  set_item.rs  space_talking_repro.rs  split.rs  synced.rs  synced_delete.rs  synced_insert.rs  synced_insert_audio.rs  synced_insert_into.rs  synced_insert_unsynced.rs  synced_move.rs  synced_move_unsynced.rs  synced_replace.rs  synced_resize.rs  synced_split.rs  synced_sync_unsync.rs  synced_track_info.rs  synced_two_clips.rs  tracks_api.rs  volume.rs
tellers-timeline-core/tests/common/: mod.rs
tellers-timeline-core/tests/fixtures/: new_project_delete.otio  new_project_move_cut.otio  space_talking_cat.otio  space_talking_cat_move_hh10.otio  space_talking_cat_v2.otio
tellers-timeline-schema/: Cargo.toml
tellers-timeline-schema/src/: main.rs
