[workspace]
members = [
    "tellers-timeline-core",
    "tellers-timeline-schema",
    "bindings/python",
]
resolver = "2"

[workspace.package]
authors = ["robin guignard-perret"]
edition = "2021"
license = ""
repository = "https://github.com/tellers-ai/tellers-timeline"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "0.8", features = ["uuid1"] }
thiserror = "1.0"
wasm-bindgen = { version = "0.2" }
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py38"] }
rand = "0.8"
