[package]
name = "tellers-timeline-core"
version = "0.1.0"
edition = "2021"
authors = ["tellers-oss"]
license = "MIT OR Apache-2.0"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
