[package]
name = "tellers-timeline-flutter-bridge"
version = "0.1.0"
edition = "2021"

[lib]
name = "tellers_timeline_flutter_bridge"
crate-type = ["cdylib", "rlib"]

[dependencies]
tellers-timeline-core = { path = "../../tellers-timeline-core" }
serde = { workspace = true }
serde_json = { workspace = true }
flutter_rust_bridge = { version = "2", features = ["chrono", "uuid"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }






