[package]
name = "otio-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { workspace = true }
tellers-timeline-core = { path = "../../tellers-timeline-core" }
serde_json = { workspace = true }
uuid = { version = "1.10", features = ["serde", "v4", "js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
