[package]
name = "tellers-timeline-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { workspace = true }
tellers-timeline-core = { path = "../../tellers-timeline-core" }
serde_json = { workspace = true }
uuid = { version = "1.10", features = ["serde", "v4", "js"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
